# fastapi-jwt-auth-demo

./: README.md  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4d25bf76bebd_create_active_colum_in_user.py
api/auth/: utils.py
api/demo_jwt_auth/jwt_auth/: __init__.py  helpers.py  jwt_auth.py  token_info.py
cert/: private_key.pem
core/: __init__.py  base.py  config.py
db/: __init__.py  helper.py
model/: __init__.py  crud.py  user.py  views.py
shema/: __init__.py  user.py
